--- a/MobileEstimatorApp/MobileEstimatorApp/Views/VehicleInfoPageOne.xaml
+++ b/MobileEstimatorApp/MobileEstimatorApp/Views/VehicleInfoPageOne.xaml
@@ -1,5 +1,84 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="MobileEstimatorApp.VehicleInfoPageOne">
+<ContentPage 
+	xmlns="http://xamarin.com/schemas/2014/forms" 
+	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+	x:Class="MobileEstimatorApp.VehicleInfoPageOne">
+	
 	<ContentPage.Content>
+		<AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+
+			<StackLayout BackgroundColor="Maroon" AbsoluteLayout.LayoutBounds="0,0,1,0.1" AbsoluteLayout.LayoutFlags="All" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+				
+				<Label HorizontalOptions="Start" VerticalOptions="FillAndExpand">
+				</Label>
+				<Label Text="Mobile Estimator" TextColor="Teal" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+				</Label>
+				<Label HorizontalOptions="End" VerticalOptions="FillAndExpand">
+				</Label>
+				
+			</StackLayout>
+
+			<StackLayout BackgroundColor="Teal" AbsoluteLayout.LayoutBounds="1,1,1,0.9" AbsoluteLayout.LayoutFlags="All" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+
+				<StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+					<Grid ColumnSpacing="30" RowSpacing="30" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+						<!--<Grid.RowDefinitions>
+							<RowDefinition Height = "1*" />
+							<RowDefinition Height = "0.1*" />
+							<RowDefinition Height = "1*" />
+						</Grid.RowDefinitions>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width = "1*" />
+							<ColumnDefinition Width = "1*" />
+							<ColumnDefinition Width = "1*" />
+							<ColumnDefinition Width = "1*" />
+							<ColumnDefinition Width = "1*" />
+						</Grid.ColumnDefinitions>-->
+
+						<Grid.RowDefinitions>
+							<RowDefinition Height = "1*" />
+						</Grid.RowDefinitions>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width = "Auto" />
+							<ColumnDefinition Width = "Auto" />
+							<ColumnDefinition Width = "Auto" />
+							<ColumnDefinition Width = "Auto" />
+							<!--<ColumnDefinition Width = "Auto" />-->
+						</Grid.ColumnDefinitions>
+
+						<StackLayout Grid.Row="0" Grid.Column="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+							<Image Source="profileOne.png" HeightRequest="50" WidthRequest="50">
+							</Image>
+						</StackLayout>
+						<BoxView Color="Transparent" Grid.Row="0" Grid.Column="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+						</BoxView>
+
+						<StackLayout Grid.Row="0" Grid.Column="1" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+							<Image Source="settingsOne.png" HeightRequest="50" WidthRequest="50">
+							</Image>
+						</StackLayout>
+						<BoxView Color="Transparent" Grid.Row="0" Grid.Column="1" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+						</BoxView>
+
+						<StackLayout Grid.Row="0" Grid.Column="2" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+							<Image Source="imageOne.png" HeightRequest="50" WidthRequest="50">
+							</Image>
+						</StackLayout>
+						<BoxView Color="Transparent" Grid.Row="0" Grid.Column="2" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+						</BoxView>
+
+						<StackLayout Grid.Row="0" Grid.Column="3" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+							<Image Source="descriptionsOne.png" HeightRequest="50" WidthRequest="50">
+							</Image>
+						</StackLayout>
+						<BoxView Color="Transparent" Grid.Row="0" Grid.Column="3" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+						</BoxView>
+						
+					</Grid>
+				</StackLayout>
+				
+			</StackLayout>
+
+		</AbsoluteLayout>
 	</ContentPage.Content>
 </ContentPage>
