--- a/MobileEstimatorApp/MobileEstimatorApp/Views/VehicleServiceChoice.xaml
+++ b/MobileEstimatorApp/MobileEstimatorApp/Views/VehicleServiceChoice.xaml
@@ -1,5 +1,85 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="MobileEstimatorApp.VehicleServiceChoice">
+<ContentPage 
+	xmlns="http://xamarin.com/schemas/2014/forms" 
+	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="MobileEstimatorApp.VehicleServiceChoice">
+
 	<ContentPage.Content>
+		<AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+
+			<StackLayout BackgroundColor="Maroon" AbsoluteLayout.LayoutBounds="0,0,1,0.1" AbsoluteLayout.LayoutFlags="All" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+				<Label HorizontalOptions="Start" VerticalOptions="FillAndExpand">
+				</Label>
+				<Label Text="Mobile Estimator" TextColor="Teal" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+				</Label>
+				<Label HorizontalOptions="End" VerticalOptions="FillAndExpand">
+				</Label>
+			</StackLayout>
+
+			<StackLayout BackgroundColor="Teal" AbsoluteLayout.LayoutBounds="1,1,1,0.9" AbsoluteLayout.LayoutFlags="All" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+
+				<StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+					<Grid ColumnSpacing="30" RowSpacing="30" HorizontalOptions="CenterAndExpand" VerticalOptions="Start">
+						<!--<Grid.RowDefinitions>
+							<RowDefinition Height = "1*" />
+							<RowDefinition Height = "0.1*" />
+							<RowDefinition Height = "1*" />
+						</Grid.RowDefinitions>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width = "1*" />
+							<ColumnDefinition Width = "1*" />
+							<ColumnDefinition Width = "1*" />
+							<ColumnDefinition Width = "1*" />
+							<ColumnDefinition Width = "1*" />
+						</Grid.ColumnDefinitions>-->
+
+						<Grid.RowDefinitions>
+							<RowDefinition Height = "Auto" />
+							<RowDefinition Height = "Auto" />
+						</Grid.RowDefinitions>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width = "Auto" />
+							<ColumnDefinition Width = "Auto" />
+						</Grid.ColumnDefinitions>
+
+						<StackLayout Grid.Row="0" Grid.Column="0" >
+							<Image Source="estimationThree.png" HeightRequest="100" WidthRequest="100">
+							</Image>
+							<Label Text="Estimate" HorizontalOptions="CenterAndExpand" VerticalOptions="Start">
+							</Label>
+						</StackLayout>
+						<BoxView Color="Transparent" Grid.Row="0" Grid.Column="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+							<BoxView.GestureRecognizers>
+								<TapGestureRecognizer NumberOfTapsRequired="1" Tapped="EstimateButtonClicked" />
+							</BoxView.GestureRecognizers>
+						</BoxView>
+						<StackLayout Grid.Row="0" Grid.Column="1">
+							<Image Source="repairOne.png" HeightRequest="100" WidthRequest="100" >
+							</Image>
+							<Label Text="Repair" HorizontalOptions="CenterAndExpand" VerticalOptions="Start">
+							</Label>
+						</StackLayout>
+						<BoxView Color="Transparent" Grid.Row="0" Grid.Column="1" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+							<BoxView.GestureRecognizers>
+								<TapGestureRecognizer NumberOfTapsRequired="1" Tapped="RepairButtonClicked" />
+							</BoxView.GestureRecognizers>
+						</BoxView>
+						<StackLayout Grid.Row="1" Grid.Column="0">
+							<Image Source="historyOne.png" HeightRequest="100" WidthRequest="100" >
+							</Image>
+							<Label Text="History" HorizontalOptions="Center" VerticalOptions="Start">
+							</Label>
+						</StackLayout>
+						<BoxView Color="Transparent" Grid.Row="1" Grid.Column="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+							<BoxView.GestureRecognizers>
+								<TapGestureRecognizer NumberOfTapsRequired="1" Tapped="HistoryButtonClicked" />
+							</BoxView.GestureRecognizers>
+						</BoxView>
+						
+					</Grid>
+				</StackLayout>
+				
+			</StackLayout>
+
+		</AbsoluteLayout>
 	</ContentPage.Content>
 </ContentPage>
